infra/test-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-client
  template:
    metadata:
      labels:
        app: test-client
    spec:
      nodeSelector:
        zone: us-east-2b
      containers:
        - name: test-client
          image: davimehra/test-client
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: test-client-svr
spec:
  type: ClusterIP
  selector:
    app: test-client
  ports:
    - name: test-client-serviceport
      protocol: TCP
      port: 80
      targetPort: 3000
