infra/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-svr
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: kops.basic-dev-ops-site-trial.co
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: test-server-svr
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-client-svr
                port:
                  number: 80
